# robot

./: README.md  README.md~  README_robot_pfm.md  comentaris_carlos_macro
basch/: control.sh
config/: controllers.yaml
launch/: dashboard.launch.xml  display.launch  inertia_test.launch  mimic.launch  prova_macro.launch  r2d2.launch  simulate.launch  spm_1.launch  spm_2.launch  week_1.launch  week_2.launch  week_21.launch~  week_3 .launch~  week_3.launch  week_4.launch  week_5.launch  week_6.launch
meshes/: arm_1.stl  arm_2.stl  as.stl  bottom_propeller.stl  bottom_propeller_0_0.stl  centre_esfera.stl  centre_esfera_02.stl  eix_motor.STL  eix_motor.stl  esfera.stl  fake.stl  fake_0_0.stl  fake_1.stl  fork.stl  helix_inferior.STL  helix_superior.STL  inferior.stl  main_body.STL  motor.stl  plat_superior.STL  plat_superior.stl  plat_superior_01.stl  plat_superior_02.stl  plat_superior_0_0.stl  plat_superior_0_0_0.stl  spm_arm_inferior.stl  spm_arm_superior.stl  spm_brac_inferior_v2.stl  spm_brac_superior_v2.stl  stepper_motor.stl  stepper_motor_1.stl  stepper_motor_axis.stl  stepper_motor_body.stl  superior.stl  superior_arm.stl  top_propeller.stl  top_propeller_0_0.stl
model/: revolver.urdf.xacro
robot/: CMakeLists.txt  README.md  README.md~  package.xml  revolver_robot.urdf
robot/launch/: display.launch~  week_1.launch~  week_2.launch~
robot/urdf/: week_1.urdf  week_2.urdf
rviz/: urdf.rviz
urdf/: mimic.urdf  prova_macro.urdf  spm_1.urdf  spm_1.urdf~  spm_2.urdf  week_1.urdf  week_2.urdf  week_3.urdf  week_3_1.urdf  week_4.urdf  week_5.urdf  week_6.urdf
(+6 files in other folders)
